--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,10 +1,15 @@
 body {
     font-family: 'Dosis', sans-serif;
     font-size: 1rem;
-    
 
-    background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgb(252, 238, 244) 28%);
+
+    background: rgb(255, 255, 255);
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgb(252, 238, 244) 28%);
+}
+
+.final {
+    background: rgb(190,255,221);
+    background: radial-gradient(circle, rgba(190,255,221,1) 0%, rgba(113,255,180,1) 70%);
 }
 
 .title {
@@ -30,14 +35,19 @@ body {
     max-height: 1080px;
     color: #363cab;
 }
+
 .row {
     height: 100%;
     max-height: 1080px;
     margin-left: 3px;
-
 }
 
 .image-background {
+    width: 50vh;
+    max-width: 512px;
+}
+
+.image-background2 {
     width: 50vh;
     max-width: 512px;
 }
@@ -48,8 +58,14 @@ body {
     overflow-x: hidden;
 }
 
-.form-control, .form-select, .form-btn {
+.form-control,
+.form-select,
+.form-btn {
     width: 90%;
+}
+
+.header {
+    margin-top: 3vw;
 }
 
 
@@ -58,17 +74,23 @@ body {
         height: auto;
         margin-top: 3vw;
     }
-    
+
     .image-background {
         width: 30vh;
+        max-width: 256px;
+    }
+
+    .image-background2 {
+        width: 15vh;
         max-width: 256px;
     }
 
     .column-reverse {
         flex-direction: column-reverse;
     }
+
     .btn {
         margin-bottom: 2vw;
     }
-    
-  }
+
+}
